// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProposalMapPopover /> should render popover with a default picture given a proposal without a media 1`] = `
<Fragment>
  <ProposalMapPopover__PopoverContainer>
    <ProposalMapPopover__Status
      color="#5cb85c"
    >
      cv ou quoi le frer le boss lacoste tn ou pas?
    </ProposalMapPopover__Status>
    <ProposalMapPopover__PopoverContent>
      <h4>
        <a
          href="http://test.com"
        >
          testProposal
        </a>
      </h4>
      <div>
        <Icon
          color="#ffffff"
          size={36}
        />
        <SimpleProposalBackground
          color="purple"
          id="background-http://test.com"
        />
        <div>
          <ProposalMapPopover__PopoverInfo
            displayPicture={true}
          >
            <Icon
              color="#acacac"
              name="tag"
              size={12}
            />
            <span>
              Cat
            </span>
          </ProposalMapPopover__PopoverInfo>
          <ProposalMapPopover__PopoverInfo
            displayPicture={true}
          >
            <Icon
              color="#acacac"
              name="new-user"
              size={12}
            />
            <Relay(Connect(UserLink))
              user={
                Object {
                  "$fragmentRefs": null,
                }
              }
            />
          </ProposalMapPopover__PopoverInfo>
        </div>
      </div>
    </ProposalMapPopover__PopoverContent>
  </ProposalMapPopover__PopoverContainer>
</Fragment>
`;

exports[`<ProposalMapPopover /> should render popover with a picture given the feature is enabled 1`] = `
<Fragment>
  <ProposalMapPopover__PopoverContainer>
    <ProposalMapPopover__PopoverContent>
      <h4>
        <a
          href="http://test.com"
        >
          testProposal
        </a>
      </h4>
      <div>
        <img
          alt="proposal-illustration"
          src="media.jpg"
        />
        <div>
          <ProposalMapPopover__PopoverInfo
            displayPicture={true}
          >
            <Icon
              color="#acacac"
              name="new-user"
              size={12}
            />
            <Relay(Connect(UserLink))
              user={
                Object {
                  "$fragmentRefs": null,
                }
              }
            />
          </ProposalMapPopover__PopoverInfo>
        </div>
      </div>
    </ProposalMapPopover__PopoverContent>
  </ProposalMapPopover__PopoverContainer>
</Fragment>
`;

exports[`<ProposalMapPopover /> should render popover without a picture given the feature is disabled 1`] = `
<Fragment>
  <ProposalMapPopover__PopoverContainer>
    <ProposalMapPopover__PopoverContent>
      <h4>
        <a
          href="http://test.com"
        >
          testProposal
        </a>
      </h4>
      <div>
        <div>
          <ProposalMapPopover__PopoverInfo
            displayPicture={false}
          >
            <Icon
              color="#acacac"
              name="new-user"
              size={12}
            />
            <Relay(Connect(UserLink))
              user={
                Object {
                  "$fragmentRefs": null,
                }
              }
            />
          </ProposalMapPopover__PopoverInfo>
        </div>
      </div>
    </ProposalMapPopover__PopoverContent>
  </ProposalMapPopover__PopoverContainer>
</Fragment>
`;
